# ptr_mcp_servers_registry

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker_compose_generator.py  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
dockerfiles/: Dockerfile.base
mcp_servers/servers/git_server/: server.py
mcp_servers/utils/: logger_utils.py
mcp_servers_registry/: server.py
mcp_servers_registry/app_server/: app.py  style.css
mcp_servers_registry/servers/: server_config.json
mcp_servers_registry/servers/aws_utils_server/: README.md  server.py
mcp_servers_registry/servers/base_mcp_server/: server.py
mcp_servers_registry/servers/code_remediation_server/: README.md  server.py
mcp_servers_registry/servers/env_lookup_server/: README.md  server.py
mcp_servers_registry/servers/git_server/: README.md  server.py
mcp_servers_registry/servers/git_server1/: server.py
mcp_servers_registry/servers/jira_server/: README.md  server.py
mcp_servers_registry/servers/servicenow_server/: README.md  server.py
mcp_servers_registry/servers_config/: aws_utils_server.json  code_remediation_server.json  env_lookup_server.json  git_server.json  git_server1.json  jira_server.json  servicenow_server.json
mcp_servers_registry/utils/: __init__.py  aws_utils.py  batch_utils.py  code_remediation_utils.py  env_utils.py  file_utils.py  git_utils.py  jira_utils.py  logger_utils.py  prompt_generator.py  s3_utils.py  servicenow_utils.py
